--- a/src/react-blog-example/package.json
+++ b/src/react-blog-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "react-blog-example",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://geekodour.github.io/gitpushblog/",
