--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "a git based blog engine - (currently using react)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pregenerate": "npm run clean:dist",
+    "generate": "node scripts/generate.js",
+    "postgenerate": "webpack",
+    "clean:dist": "rimraf './build/*'"
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,22 @@
   "homepage": "https://github.com/geekodour/gitpushblog#readme",
   "dependencies": {
     "github-blog-api": "1.0.1",
-    "nunjucks": "3.0.0"
+    "nunjucks": "3.0.0",
+    "webpack": "2.6.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "7.1.1",
+    "babel-cli": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "6.24.1",
+    "css-loader": "0.28.2",
+    "extract-text-webpack-plugin": "2.1.0",
+    "node-sass": "4.5.3",
+    "postcss-loader": "2.0.5",
+    "postcss-smart-import": "0.7.2",
+    "precss": "1.4.0",
+    "rimraf": "2.6.1",
+    "sass-loader": "6.0.5",
+    "style-loader": "0.18.0"
   }
 }
