--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "homepage": "https://github.com/geekodour/gitpushblog#readme",
   "dependencies": {
     "bulma": "0.4.1",
-    "github-blog-api": "1.0.1",
-    "nunjucks": "3.0.0",
-    "webpack": "2.6.0"
+    "github-blog-api": "1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
     "babel-cli": "6.24.1",
+    "marked": "0.3.6",
+    "nunjucks": "3.0.0",
+    "webpack": "2.6.0",
     "babel-loader": "7.0.0",
     "babel-preset-es2015": "6.24.1",
     "css-loader": "0.28.2",
