added vendor files to webpack build

--- a/blog_config.json
+++ b/blog_config.json
@@ -1,4 +1,6 @@
 {
-  "blog_url": "https://geekodour.github.io/githubstats/",
-  "posts_url": ""
+  "username": "",
+  "repo": "",
+  "posts_per_page": "",
+  "comments_per_page": ""
 }
