--- a/blog_config.json
+++ b/blog_config.json
@@ -1,6 +1,7 @@
 {
-  "username": "",
-  "repo": "",
+  "username": "lukego",
+  "author": "lukego",
+  "repo": "blog",
   "posts_per_page": "2",
   "comments_per_page": ""
 }
