--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "gitpushblog",
   "version": "1.0.0",
-  "description": "a git based blog engine - (currently using react)",
+  "description": "a git based blog engine - (using nunjucks)",
   "main": "index.js",
   "scripts": {
     "test": "node scripts/test.js",
     "generate": "npm-run-all clean:dist build:dist webpack:dist",
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
+    "upload": "node scripts/upload.js",
     "build:dev": "node scripts/dev.js",
     "build:dist": "node scripts/generate.js",
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
@@ -28,7 +29,8 @@
     "bulma": "0.4.1",
     "chokidar": "1.7.0",
     "cp": "0.2.0",
-    "github-blog-api": "1.1.2",
+    "dotenv": "4.0.0",
+    "github-blog-api": "1.1.3",
     "npm-run-all": "4.0.2",
     "slug": "0.9.1"
   },
