--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "4.0.0",
     "github-blog-api": "1.1.3",
     "npm-run-all": "4.0.2",
+    "pushstate-server": "3.0.0",
     "slug": "0.9.1"
   },
   "devDependencies": {
