--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "chokidar": "1.7.0",
     "cp": "0.2.0",
     "dotenv": "4.0.0",
-    "github-blog-api": "1.1.7",
+    "github-blog-api": "1.1.8",
     "npm-run-all": "4.0.2",
+    "ora": "1.2.0",
     "pushstate-server": "3.0.0",
     "slug": "0.9.1"
   },
