--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "node scripts/test.js",
     "generate": "npm-run-all clean:dist build:dist webpack:dist",
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
+    "dev2": "npm-run-all --parallel clean:dev build:dev2 webpack:dev",
     "upload": "node scripts/upload.js",
     "build:dev": "node scripts/dev.js",
+    "build:dev2": "node scripts/dev22.js",
     "build:dist": "node scripts/generate.js",
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
     "webpack:dist": "webpack --env=prod --progress --colors",
@@ -30,11 +32,11 @@
     "chokidar": "1.7.0",
     "cp": "0.2.0",
     "dotenv": "4.0.0",
-    "github-blog-api": "1.1.8",
+    "github-blog-api": "1.1.9",
     "npm-run-all": "4.0.2",
     "ora": "1.2.0",
     "pushstate-server": "3.0.0",
-    "slug": "0.9.1"
+    "slugify": "1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.1",
