--- a/blog_config.json
+++ b/blog_config.json
@@ -1,6 +1,6 @@
 {
-  "username": "lukego",
-  "author": "lukego",
+  "username": "casualjavascript",
+  "author": "mateogianolio",
   "repo": "blog",
   "posts_per_page": "6",
   "comments_per_page": "3",
