added path.join to utils

--- a/blog_config.json
+++ b/blog_config.json
@@ -1,6 +1,7 @@
 {
   "meta": {
-    "blog_name": "geek blog"
+    "blog_name": "geek blog",
+    "blog_theme": "bulmadefault"
   },
   "username": "lukego",
   "author": "lukego",
