cleaned and added lines

--- a/blog_config.json
+++ b/blog_config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "blog_name": "geek blog",
-    "blog_theme": "bulmadefault"
+    "blog_theme": "newbulmadefault"
   },
   "username": "lukego",
   "author": "lukego",
