--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "generate": "npm-run-all clean:dist build:dist webpack:dist",
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
     "upload": "node scripts/upload.js",
+    "push": "node scripts/push.js",
     "build:dev": "node scripts/dev.js",
     "build:dist": "node scripts/generate.js",
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
