--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
     "upload": "node scripts/upload.js",
     "push": "node scripts/push.js",
-    "build:dev": "node scripts/deu.js",
+    "build:dev": "node scripts/dev.js",
     "build:dist": "node scripts/generate.js",
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
     "webpack:dist": "webpack --env=prod --progress --colors",
