--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "node scripts/test.js",
+
     "generate": "npm-run-all clean:dist build:dist webpack:dist",
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
     "upload": "node scripts/upload.js",
+    "new": "node scripts/new.js",
     "push": "node scripts/push.js",
+
     "build:dev": "node scripts/dev.js",
     "build:dist": "node scripts/generate.js",
+
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
     "webpack:dist": "webpack --env=prod --progress --colors",
+
     "clean:dev": "rimraf './dev/*'",
     "clean:dist": "rimraf './dist/*'"
   },
