--- a/package.json
+++ b/package.json
@@ -5,19 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "node scripts/test.js",
-
     "generate": "npm-run-all clean:dist build:dist webpack:dist",
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
     "upload": "node scripts/upload.js",
     "new": "node scripts/new.js",
     "push": "node scripts/push.js",
-
     "build:dev": "node scripts/dev.js",
     "build:dist": "node scripts/generate.js",
-
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
     "webpack:dist": "webpack --env=prod --progress --colors",
-
     "clean:dev": "rimraf './dev/*'",
     "clean:dist": "rimraf './dist/*'"
   },
@@ -38,6 +34,7 @@
     "cp": "0.2.0",
     "dotenv": "4.0.0",
     "github-blog-api": "1.1.11",
+    "inquirer": "3.1.1",
     "npm-run-all": "4.0.2",
     "ora": "1.2.0",
     "pushstate-server": "3.0.0",
