--- a/package.json
+++ b/package.json
@@ -38,9 +38,7 @@
     "npm-run-all": "4.0.2",
     "ora": "1.2.0",
     "pushstate-server": "3.0.0",
-    "slugify": "1.1.0"
-  },
-  "devDependencies": {
+    "slugify": "1.1.0",
     "autoprefixer": "7.1.1",
     "babel-cli": "6.24.1",
     "babel-loader": "7.0.0",
@@ -59,5 +57,6 @@
     "sass-loader": "6.0.5",
     "style-loader": "0.18.0",
     "webpack": "2.6.0"
-  }
+  },
+  "devDependencies": { }
 }
