--- a/package.json
+++ b/package.json
@@ -29,34 +29,35 @@
   "homepage": "https://github.com/geekodour/gitpushblog#readme",
   "dependencies": {
     "async": "2.5.0",
-    "bulma": "0.4.1",
-    "chokidar": "1.7.0",
-    "cp": "0.2.0",
-    "dotenv": "4.0.0",
-    "github-blog-api": "1.1.11",
-    "inquirer": "3.1.1",
-    "npm-run-all": "4.0.2",
-    "ora": "1.2.0",
-    "pushstate-server": "3.0.0",
-    "slugify": "1.1.0",
     "autoprefixer": "7.1.1",
     "babel-cli": "6.24.1",
     "babel-loader": "7.0.0",
     "babel-preset-es2015": "6.24.1",
+    "bulma": "0.4.1",
     "chalk": "1.1.3",
+    "chokidar": "1.7.0",
+    "cp": "0.2.0",
     "css-loader": "0.28.2",
+    "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "2.1.0",
+    "gh-pages": "1.0.0",
+    "github-blog-api": "1.1.11",
+    "inquirer": "3.1.1",
     "marked": "0.3.6",
     "mkdirp": "0.5.1",
     "node-sass": "4.5.3",
+    "npm-run-all": "4.0.2",
     "nunjucks": "3.0.0",
+    "ora": "1.2.0",
     "postcss-loader": "2.0.5",
     "postcss-smart-import": "0.7.2",
     "precss": "1.4.0",
+    "pushstate-server": "3.0.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.5",
+    "slugify": "1.1.0",
     "style-loader": "0.18.0",
     "webpack": "2.6.0"
   },
-  "devDependencies": { }
+  "devDependencies": {}
 }
