--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "npm-run-all --parallel clean:dev build:dev webpack:dev",
     "upload": "node scripts/upload.js",
     "new": "node scripts/newdraft.js",
+    "prepush": "npm run generate",
     "push": "node scripts/push.js",
+    "push:only": "node scripts/push.js",
     "build:dev": "node scripts/dev.js",
     "build:dist": "node scripts/generate.js",
     "webpack:dev": "webpack --env=dev --progress --colors --watch",
