--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pushstate-server": "3.0.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.5",
+    "slug": "0.9.1",
     "slugify": "1.1.0",
     "style-loader": "0.18.0",
     "webpack": "2.6.0",
