--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 meta:
     blog_name: iamthenameoftheblog
-    blog_theme: lagom
+    blog_theme: the-plain
     engine: nunjucks
     userpage: false
     baseurl: "/gitpushblog"
