will write the theme gen script

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "js-yaml": "3.8.4",
     "marked": "0.3.6",
     "mkdirp": "0.5.1",
+    "ncp": "2.0.0",
     "node-sass": "4.5.3",
     "npm-run-all": "4.0.2",
     "nunjucks": "3.0.0",
