--- a/themes/leonids-clone/_config.yml
+++ b/themes/leonids-clone/_config.yml
@@ -17,24 +17,24 @@ timezone:           Asia/Kuala_Lumpur # optional
 owner:
   name: Leonids
   avatar: leonids-logo.png
-  job: "PHP & Ruby Developer"
-  bio: "A backend developer who loves design awesome things. Working for RendezvousCheznous atm in Marseille, France."
+  job: "Student"
+  bio: "Opensorce guy"
   email: zourenyuan@gmail.com
   disqus-shortname: renyuanzblog
-  twitter: renyuan814 #username
+  twitter: geekodour #username
   facebook: #username
   google:
     plus: #username
-    analytics: UA-62251910-2
+    analytics: UA-651910-2
     verify:
     ad-client:
     ad-slot:
   bing-verify:
   github: geekodour #username
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: renyuan-zou-69b7038a #username
+  linkedin: #username
   xing: #username
-  instagram: geekodour
+  instagram: pramoddubeyallahabad
   lastfm: #username
   tumblr: #username
   pinterest: #username
