--- a/themes/leonids-clone/_config.yml
+++ b/themes/leonids-clone/_config.yml
@@ -18,7 +18,7 @@ owner:
   name: Leonids
   avatar: leonids-logo.png
   job: "Student"
-  bio: "Opensorce guy"
+  bio: "the struggle is real"
   email: zourenyuan@gmail.com
   disqus-shortname: renyuanzblog
   twitter: geekodour #username
