--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "generate": "npm-run-all clean:dist build:dist webpack:dist",
     "dev": "npm-run-all --parallel clean:dev webpack:dev build:dev",
     "upload": "node scripts/upload.js",
-    "new": "node scripts/newdraft.js",
+    "draft": "node scripts/newdraft.js",
     "theme": "node scripts/newtheme.js",
+    "help": "node scripts/help.js",
     "prepush": "npm run generate",
     "push": "node scripts/push.js",
     "push:only": "node scripts/push.js",
